[gd_scene load_steps=6 format=3 uid="uid://ckubxnuwec1fx"]

[ext_resource type="Script" uid="uid://dtvqnf3vj4b4" path="res://Scripts/Game/Multiplayer.gd" id="1_4chtp"]
[ext_resource type="AudioStream" uid="uid://bb84ffwrccu2h" path="res://Assets/Tracks/SpeedLight.mp3" id="2_op3lo"]
[ext_resource type="PackedScene" uid="uid://beeawe0b33fb1" path="res://Scenes/UI/UpgradeSelectMenu.tscn" id="3_ojbuf"]
[ext_resource type="PackedScene" uid="uid://beg65mxmwr3sa" path="res://Scenes/UI/SettingsMenu.tscn" id="4_66irs"]
[ext_resource type="PackedScene" uid="uid://y1ew2hgm5smv" path="res://Scenes/UI/LoadingScreen.tscn" id="4_k4lmd"]

[node name="Multiplayer" type="Node"]
script = ExtResource("1_4chtp")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0

[node name="UpgradeSelectMenu" parent="." instance=ExtResource("3_ojbuf")]
visible = false

[node name="SettingsMenu" parent="." instance=ExtResource("4_66irs")]
visible = false

[node name="LoadingScreen" parent="." instance=ExtResource("4_k4lmd")]
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_op3lo")
volume_db = -10.0
autoplay = true
bus = &"Music"
